export interface Cancha {
  uuid: string;
  nombre: string;
}
