@startuml

' Este es el modelo de datos que se pasará
' a clases en Spring Boot como entidades de persistencia

' configuraciones
hide methods

' Modelo
class Local {
    uuid : UUID
    nombre : Texto
    ubicacion: Texto
    coordenadas: Texto
    scoringPromedio: Decimal
}

class Cancha {
    uuid : UUID
    nombre : Texto
    capacidad: Entero
}

class Deporte {
    uuid: UUID
    nombre: Texto
}

class HorarioAtencion {
    uuid: UUID
    dia: Texto
    horarioApertura: Hora
    horarioCierre: Hora
}

class ConfiguracionHorario {
    uuid : UUID
    activo : Booleano
}

class ConfiguracionDia {
    uuid : UUID
    diaSemana : Texto
    horaInicio : Hora
    horaFin : Hora
}

class Usuario {
    uuid: UUID
    nombre: Texto
    scoringPromedio: Decimal
    rol: Rol
}

class Evento {
    uuid: UUID
    nombre: Texto
    cupoMinimo: Entero
    cupoMaximo: Entero
    nivelHabilitad: Texto
    estado: Texto
}

class Turno {
    uuid: UUID
    fechaHoraIncio: FechaHora
    fechaHoraFin: FechaHora
    precio: Decimal
    estado: EstadoTurno
}

class Participacion {
    estado: EstadoParticipacion
    asistio: Booleano
}

class Resena {
    uuid: UUID
    tipo: TipoResena
    puntuacion: Decimal
    comentarios: Texto 
}

enum TipoResena {
    JUGADOR
    LOCAL
}

enum EstadoTurno {
    LIBRE
    CONFIRMADO
    CANCELADO
}

enum EstadoParticipacion {
    PENDIENTE
    CONFIRMADO
    RECHAZADO
    CANCELADO
}

enum Rol {
    DEPORTISTA
    PROPIETARIO
}

' Relaciones
Local "1" *-- "*" HorarioAtencion: horarios
Local "1" *-- "*" Cancha : canchas
Cancha "1" *-- "*" ConfiguracionHorario : configuracionesHorarios
ConfiguracionHorario "1" *-- "*" ConfiguracionDia : configuracionesDias
Cancha "*" *-- "1" Deporte
Turno "*" *-- "1" Cancha: cancha
Turno "1" *-- "1" Evento
Evento "1" *-- "*" Participacion: participantes
Evento "*" *-- "1" Usuario: organizador
Participacion "1" *-- "*" Usuario
Resena "*" *-- "1" Usuario: evaluador
Resena "*" *-- "1" Usuario: evaluado
Resena "*" *-- "1" Evento
Resena "*" *-- "1" Local

' Notas
legend bottom
NOTAS:
Modelo de datos actual.

endlegend

@enduml
